# gpu-raytracer-blackhole

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  research_journal.md
configs/: config.yaml
raytracer/: camera.py
raytracer/physics/: integrators.py  metrics.py
raytracer/utils/: io_helpers.py
raytracer/visualization/: render.py
tests/: test_physics.py
